# hse_education_de

./: README.md
module_1/mentor_hw/hw_2_bash/: README.MD  task1.sh  task2.sh  task3.sh  task4.sh  task5.sh
module_1/mentor_hw/hw_2_bash/hard_task1/: hard_task1.sh
module_1/mentor_hw/hw_2_bash/hard_task1/task6_backup_2025-10-18_15-33-05/: error.log_2025-10-18_15-33-05  input.txt_2025-10-18_15-33-05  task6.sh_2025-10-18_15-33-05
module_1/mentor_hw/hw_2_bash/hard_task2/: hard_task2.sh
module_1/mentor_hw/hw_2_bash/hard_task3/: hard_task3.sh
module_1/python_from_de/: README.MD
module_1/python_from_de/home_work_1/: README.md  dz_1.ipynb  pyproject.toml
module_1/python_from_de/home_work_2/: README.md  dz_2.ipynb  pyproject.toml
module_1/python_from_de/home_work_3/: README.MD  dz_3.ipynb  pyproject.toml
module_1/python_from_de/home_work_4/: README.MD  dz_4.ipynb  pyproject.toml
module_1/python_from_de/home_work_5/: README.md  dz5.py  dz_5.ipynb  pyproject.toml  Тема 5. ООП.ipynb
module_1/python_from_de/home_work_5/tests/: run_tests.py  test_accounts.py
module_1/sql_simulation/: docker-compose.yml  init-extensions.sql
module_1/sql_simulation/home_work2/: SELECT aircraft_code,.sql
